--- a/index.css
+++ b/index.css
@@ -1,47 +1,1 @@
-.header{
-    display: flex;
-    justify-items: space-between;
-    height: 100px;
-    border: 1px solid black;
-}
-
-.nav-items{
-    padding: 0px 20px;
-}
-.nav-items > ul{
-    font-size: 20px;
-    display: flex;
-    list-style-type: none;
-}
-.nav-items>ul>li{
-    padding: 10px;
-    margin: 10px;
-}
-.res-Container{
-    display: flex;
-    flex-wrap: wrap;
-}
-.res-card{
-    width: 200px;
-    height:400px;
-    padding:5px;
-    background-color: aqua;
-    margin: 5px;
-}
-.filter-btn{
-    margin: 10px;
-    cursor: pointer;
-}
-.res-card:hover{
-    cursor: pointer;
-    border:1px solid black;
-}
-.main-logo{
-    width: 70px;
-}
-.search{
-    padding:10px;
-}
-.res-logo{
-    width: 100%;
-}
+@import "tailwindcss";
